# igdb-feature-store

./: .gitignore  README.md  pyproject.toml
igdb-feature-store-api/: pyproject.toml
igdb-feature-store-etl/: pyproject.toml
igdb-feature-store-tasks/: pyproject.toml
igdb_feature_store/db/: collect.py  ingestor.py
