[tool.poetry]
name = "igdb-feature-store"
version = "0.1.0"
description = ""
authors = ["Lucas Caraça <lucascaraca94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
